--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </section>
             <section class="ml-2 mr-2">
                 <h2 class="text-lg font-bold">About me</h2>
-                저는 주니어 프론트엔드 개발자입니다.구글링 하는것을 좋아하고, 동료들과 소통하며 프로젝트를 진행하는 것을 좋아합니다. 
+                주니어 프론트엔드 개발자입니다. 한가지 주제를 깊게 탐구하는 것을 좋아하며, 동료들과 소통하며 프로젝트를 진행하는 작업을 좋아합니다. 
             </section>
             <section class="ml-2 mr-2 mt-3">
                 <h2 class="text-lg font-bold">Contact me</h2>
@@ -33,42 +33,42 @@
             <section class="bg-[#F7C4BF] mb-4 p-2">
                 <h2 class="text-xl mb-2 font-bold">Projects</h2>
                 <ul class="grid grid-rows-3 grid-cols-2 gap-1">
-                    <li class="bg-[#C3938F]">
+                    <li class="bg-[#C3938F] p-2">
                         <a href="#" class="text-lg font-bold underline decoration-[#F7C4BF]">감귤마켓</a>
                         <p class="text-sm font-bold">HTML,CSS,JavaScript</p>
                         <p class="text-sm mb-1">
                             스토어에서 원하는 물품 판매 및 관리할 수 있는 웹 페이지 입니다.
                         </p>
                     </li>
-                    <li class="bg-[#C3938F]">
+                    <li class="bg-[#C3938F] p-2">
                         <a href="#" class="text-lg font-bold underline decoration-[#F7C4BF]">밴딩 머신</a>
                         <p class="text-sm font-bold">HTML,CSS,JavaScript</p>
                         <p class="text-sm mb-1">
                             자판기 기능을 사용한 웹 페이지 입니다. 반응형으로 구현되었습니다.
                         </p>
                     </li>
-                    <li class="bg-[#C3938F]">
+                    <li class="bg-[#C3938F] p-2">
                         <a href="#" class="text-lg font-bold underline decoration-[#F7C4BF]">일만시간의 법칙</a>
                         <p class="text-sm font-bold">HTML,CSS,JavaScript</p>
                         <p class="text-sm mb-1">
                             원하는 목표 및 투자할 시간을 입력하면, 목표까지의 시간을 계산해주는 기능을 넣은 웹 페이지 입니다. 반응형으로 작업되었습니다.
                         </p>
                     </li>
-                    <li class="bg-[#C3938F]">
+                    <li class="bg-[#C3938F] p-2">
                         <a href="#" class="text-lg font-bold underline decoration-[#F7C4BF]">팀 프로젝트</a>
                         <p class="text-sm font-bold">HTML,CSS,JavaScript,React</p>
                         <p class="text-sm mb-1">
                             오프라인 스터디팀과 만든 프로젝트
                         </p>
                     </li>
-                    <li class="bg-[#C3938F]">
+                    <li class="bg-[#C3938F] p-2">
                         <a href="#" class="text-lg font-bold underline decoration-[#F7C4BF]">개인 프로젝트</a>
                         <p class="text-sm font-bold">HTML,CSS,JavaScript,React</p>
                         <p class="text-sm mb-1">
                             개인 프로젝트
                         </p>
                     </li>
-                    <li class="bg-[#C3938F]">
+                    <li class="bg-[#C3938F] p-2">
                         <a href="#" class="text-lg font-bold underline decoration-[#F7C4BF]"> 책 [잡았다,요 돔!]집필</a>
                         <p class="text-sm mb-1">
                             DOM의 개요 및 노드 파트를 집필했습니다.
@@ -80,7 +80,7 @@
             <div class="grid grid-cols-3 gap-2">
                 <div class="bg-[#F7C4BF] text-center">
                     <h3 class="mt-2 mb-2 text-black font-bold">Stacks</h3>
-                    <ul class="mt-2 mb-2">
+                    <ul class="mt-2 mb-2 grid grid-cols-2 p-2">
                         <li class="text-2xl">
                             <i class="fab fa-html5"></i></li>
                         <li class="text-2xl"><i class="fab fa-css3"></i></li>
@@ -117,9 +117,9 @@
                     <p class="font-bold mb-1">멋쟁이사자차럼 FE스쿨 3기</p>
                     <span>멋쟁이사자처럼 프론트엔드스쿨 3기에서, 제주코딩베이스캠프 강사진,멘토진 분들께 프론트엔드 개발자 교육을 받았습니다. 동기들과 함께 크고작은 문제를 해결해나가며 개발자로서의 소양을 쌓았습니다. </span>
                     <p class="mt-2 font-bold mb-1">lorem기업</p>
-                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, autem.</span>
+                    <span>인쇄물을 디자인하는 작은 기업에서 디자인 및 고객관리를 담당했습니다. 해당 기업에서 일러스트, 포토샵 등을 이용하여 인쇄물 초안을 제작하였고, 인쇄물 주문/디자인/배포 및 반품/환불 관리까지 모두 담당했습니다. </span>
                     <p class="mb-1 mt-2 font-bold">lorem여행사</p>
-                    <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consectetur.</span>
+                    <span>중남미, 아프리카, 코카서스, 인도 등 오지전문 여행사에 입사하여 여행상품 제작 및 보조가이드, 항공을 담당했습니다. </span>
             </div>
 
         </section>
