사진 안나오는 현상 해결

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <wrapper class=" m-10 flex outline outline-offset-2 outline-[#C3938F] bg-[#926562] drop-shadow-2xl">
         <header class="bg-[#C3938F] w-1/4">
             <section class="text-center mb-3">
-                <img src="/구경/jimmy-fermin-bqe0J0b26RQ-unsplash.jpg" alt="" class="mt-5 mb-5 rounded-full">
+                <img src="구경/jimmy-fermin-bqe0J0b26RQ-unsplash.jpg" alt="" class="mt-5 mb-5 rounded-full">
                 <h1 class="font-bold text-xl underline decoration-[#F7C4BF]">minseung Kim</h1>
                 <span class="font-bold">JR Frontend Developer</span>
             </section>
